--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
+    "font-awesome": "^4.7.0",
     "js-cookie": "2.2.0",
     "md5": "^2.3.0",
     "normalize.css": "7.0.0",
