--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "dayjs": "^1.10.6",
     "element-ui": "2.13.2",
     "font-awesome": "^4.7.0",
     "js-cookie": "2.2.0",
