--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,11 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "socket.io-client": "^4.4.0",
     "vue": "2.6.10",
     "vue-contextmenujs": "^1.3.13",
     "vue-router": "3.0.6",
+    "vue-socket.io-extended": "^4.2.0",
     "vue-splitpane": "^1.0.6",
     "vuex": "3.1.0"
   },
