--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "0.18.1",
+    "browser-image-compression": "^1.0.17",
     "core-js": "3.6.5",
     "dayjs": "^1.10.6",
     "element-ui": "2.13.2",
