--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
-    "socket.io": "^4.4.0"
+    "socket.io": "^4.4.0",
+    "uuid": "^8.3.2"
   }
 }
