--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "vue-router": "3.0.6",
     "vue-socket.io-extended": "^4.2.0",
     "vue-splitpane": "^1.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "webrtc-adapter": "^8.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
